Changed default template to generate the GWT Module in the same package as the RF interfaces
Note: Package for the resources is still generated wrongly

--- a/src/googleapis/codegen/templates/gwt/default/templates/___package___/___api_className___.gwt.xml.tmpl
+++ b/src/googleapis/codegen/templates/gwt/default/templates/___package___/___api_className___.gwt.xml.tmpl
@@ -2,5 +2,5 @@
   <inherits name="com.google.web.bindery.requestfactory.RequestFactory"/>
   <inherits name="com.google.api.gwt.ApiCore" />
 
-  <source path="{{ api.name }}" includes="shared/**"/>
+  <source path="./" />
 </module>
